# GAMES101-Homework

./: .gitignore  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  README.md  Renderer.cpp  Scene.cpp  Scene.hpp  Texture.hpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
CGL/include/CGL/: vector2D.h
image/: binary.ppm  sah
src/: rope.cpp
task0/: main.cpp
task1/: main.cpp
task3/: main.cpp  rasterizer.cpp
task4/code/: main.cpp
task5/Code/: Renderer.cpp  Triangle.hpp  Vector.hpp
task6/: BVH.cpp  Bounds3.hpp  RayTracing.vcxproj  Renderer.cpp  Triangle.hpp  main.cpp
task6/task6/: BVH.cpp  Bounds3.hpp  RayTracing.sln  RayTracing.vcxproj.filters  Renderer.cpp  Triangle.hpp
task6/x64/Debug/: RayTracing.exe.recipe  RayTracing.ilk  RayTracing.vcxproj.FileListAbsolute.txt  vc143.idb
task6/x64/Debug/RayTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
